add types, widgets

--- a/book/makepad/event/match_event.html
+++ b/book/makepad/event/match_event.html
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/built-in/struct.html"><strong aria-hidden="true">2.2.</strong> Built-In</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.3.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/syntax/global.html"><strong aria-hidden="true">2.3.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/import.html"><strong aria-hidden="true">2.3.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.3.3.</strong> Macro</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.3.1.</strong> </div></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/syntax/redraw.html"><strong aria-hidden="true">2.3.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../makepad/event/event.html"><strong aria-hidden="true">2.3.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/event/match_event.html" class="active"><strong aria-hidden="true">2.3.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/built-in/built-in.html"><strong aria-hidden="true">2.2.</strong> Built-In</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/built-in/types/types.html"><strong aria-hidden="true">2.2.1.</strong> Types</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/built-in/types/walk.html"><strong aria-hidden="true">2.2.1.1.</strong> Walk</a></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/built-in/widgets/widgets.html"><strong aria-hidden="true">2.2.2.</strong> Widgets</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/built-in/widgets/window.html"><strong aria-hidden="true">2.2.2.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../../makepad/built-in/widgets/view.html"><strong aria-hidden="true">2.2.2.2.</strong> View</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.3.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/syntax/global.html"><strong aria-hidden="true">2.3.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/import.html"><strong aria-hidden="true">2.3.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.3.3.</strong> Macro</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/redraw.html"><strong aria-hidden="true">2.3.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../makepad/event/event.html"><strong aria-hidden="true">2.3.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/event/match_event.html" class="active"><strong aria-hidden="true">2.3.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -176,6 +176,37 @@
                         <h1 id="matchevent-trait"><a class="header" href="#matchevent-trait">MatchEvent Trait</a></h1>
 <p>The <code>MatchEvent</code> trait provides a framework for handling a wide array of events, encompassing application lifecycle, user interactions, network responses, and more.</p>
 <p>Whenever there's a need to handle events for widgets, you should opt to implement this trait rather than crafting your own implementation.</p>
+<h2 id="matchevent-functions"><a class="header" href="#matchevent-functions">MatchEvent Functions</a></h2>
+<p>The <code>MatchEvent</code> trait encapsulates various event handling functions:</p>
+<ul>
+<li><code>handle_startup</code>: Initializes event handling.</li>
+<li><code>handle_shutdown</code>: Handles shutdown events.</li>
+<li><code>handle_foreground</code>: Manages app foreground entry events.</li>
+<li><code>handle_background</code>: Manages app background entry events.</li>
+<li><code>handle_pause</code>: Manages app pause events.</li>
+<li><code>handle_resume</code>: Manages app resume events.</li>
+<li><code>handle_app_got_focus</code>: Handles app focus acquisition events.</li>
+<li><code>handle_app_lost_focus</code>: Handles app focus loss events.</li>
+<li><code>handle_next_frame</code>: Prepares for the next frame events.</li>
+<li><code>handle_action</code>: Handles individual action events.</li>
+<li><code>handle_actions</code>: Handles multiple action events.</li>
+<li><code>handle_signal</code>: Manages signal events (may be used for custom events or messaging).</li>
+<li><code>handle_audio_devices</code>: Manages audio device events.</li>
+<li><code>handle_midi_ports</code>: Manages MIDI port events.</li>
+<li><code>handle_video_inputs</code>: Manages video input events.</li>
+<li><code>handle_http_response</code>: Handles HTTP response events.</li>
+<li><code>handle_http_request_error</code>: Handles HTTP request error events.</li>
+<li><code>handle_http_progress</code>: Manages HTTP progress events.</li>
+<li><code>handle_network_responses</code>: Handles network response events, calling corresponding handlers based on response type.</li>
+<li><code>handle_draw</code>: Manages drawing events.</li>
+<li><code>handle_timer</code>: Manages timer events.</li>
+<li><code>handle_draw_2d</code>: Manages 2D drawing events.</li>
+<li><code>handle_key_down</code>: Handles key press events.</li>
+<li><code>handle_key_up</code>: Handles key release events.</li>
+<li><code>handle_back_pressed</code>: Manages back button events (commonly used in mobile devices).</li>
+<li><code>match_event</code>: Matches and processes incoming events, calling corresponding handlers based on the event type.</li>
+<li><code>match_event_with_draw_2d</code>: Specialized event matching and handling logic for drawing events, using Cx2d as context.</li>
+</ul>
 <h2 id="implementing-matchevent"><a class="header" href="#implementing-matchevent">Implementing MatchEvent</a></h2>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -278,37 +309,6 @@ impl AppMain for App {
 
 app_main!(App);
 <span class="boring">}</span></code></pre></pre>
-<h2 id="matchevent-functions"><a class="header" href="#matchevent-functions">MatchEvent Functions</a></h2>
-<p>The <code>MatchEvent</code> trait encapsulates various event handling functions:</p>
-<ul>
-<li><code>handle_startup</code>: Initializes event handling.</li>
-<li><code>handle_shutdown</code>: Handles shutdown events.</li>
-<li><code>handle_foreground</code>: Manages app foreground entry events.</li>
-<li><code>handle_background</code>: Manages app background entry events.</li>
-<li><code>handle_pause</code>: Manages app pause events.</li>
-<li><code>handle_resume</code>: Manages app resume events.</li>
-<li><code>handle_app_got_focus</code>: Handles app focus acquisition events.</li>
-<li><code>handle_app_lost_focus</code>: Handles app focus loss events.</li>
-<li><code>handle_next_frame</code>: Prepares for the next frame events.</li>
-<li><code>handle_action</code>: Handles individual action events.</li>
-<li><code>handle_actions</code>: Handles multiple action events.</li>
-<li><code>handle_signal</code>: Manages signal events (may be used for custom events or messaging).</li>
-<li><code>handle_audio_devices</code>: Manages audio device events.</li>
-<li><code>handle_midi_ports</code>: Manages MIDI port events.</li>
-<li><code>handle_video_inputs</code>: Manages video input events.</li>
-<li><code>handle_http_response</code>: Handles HTTP response events.</li>
-<li><code>handle_http_request_error</code>: Handles HTTP request error events.</li>
-<li><code>handle_http_progress</code>: Manages HTTP progress events.</li>
-<li><code>handle_network_responses</code>: Handles network response events, calling corresponding handlers based on response type.</li>
-<li><code>handle_draw</code>: Manages drawing events.</li>
-<li><code>handle_timer</code>: Manages timer events.</li>
-<li><code>handle_draw_2d</code>: Manages 2D drawing events.</li>
-<li><code>handle_key_down</code>: Handles key press events.</li>
-<li><code>handle_key_up</code>: Handles key release events.</li>
-<li><code>handle_back_pressed</code>: Manages back button events (commonly used in mobile devices).</li>
-<li><code>match_event</code>: Matches and processes incoming events, calling corresponding handlers based on the event type.</li>
-<li><code>match_event_with_draw_2d</code>: Specialized event matching and handling logic for drawing events, using Cx2d as context.</li>
-</ul>
 
                     </main>
 
