--- a/book/makepad/built-in/types/walk.html
+++ b/book/makepad/built-in/types/walk.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Built-In - Gen-UI Book</title>
+        <title>Walk - Gen-UI Book</title>
 
 
         <!-- Custom HTML head -->
@@ -12,21 +12,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="../../favicon.svg">
-        <link rel="shortcut icon" href="../../favicon.png">
-        <link rel="stylesheet" href="../../css/variables.css">
-        <link rel="stylesheet" href="../../css/general.css">
-        <link rel="stylesheet" href="../../css/chrome.css">
-        <link rel="stylesheet" href="../../css/print.css" media="print">
+        <link rel="icon" href="../../../favicon.svg">
+        <link rel="shortcut icon" href="../../../favicon.png">
+        <link rel="stylesheet" href="../../../css/variables.css">
+        <link rel="stylesheet" href="../../../css/general.css">
+        <link rel="stylesheet" href="../../../css/chrome.css">
+        <link rel="stylesheet" href="../../../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="../../fonts/fonts.css">
+        <link rel="stylesheet" href="../../../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../../highlight.css">
-        <link rel="stylesheet" href="../../tomorrow-night.css">
-        <link rel="stylesheet" href="../../ayu-highlight.css">
+        <link rel="stylesheet" href="../../../highlight.css">
+        <link rel="stylesheet" href="../../../tomorrow-night.css">
+        <link rel="stylesheet" href="../../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -35,7 +35,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "../../";
+            var path_to_root = "../../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/built-in/struct.html" class="active"><strong aria-hidden="true">2.2.</strong> Built-In</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.3.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/syntax/global.html"><strong aria-hidden="true">2.3.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/import.html"><strong aria-hidden="true">2.3.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.3.3.</strong> Macro</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.3.1.</strong> </div></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/syntax/redraw.html"><strong aria-hidden="true">2.3.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../makepad/event/event.html"><strong aria-hidden="true">2.3.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/event/match_event.html"><strong aria-hidden="true">2.3.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/built-in.html"><strong aria-hidden="true">2.2.</strong> Built-In</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/types/types.html"><strong aria-hidden="true">2.2.1.</strong> Types</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/types/walk.html" class="active"><strong aria-hidden="true">2.2.1.1.</strong> Walk</a></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/widgets.html"><strong aria-hidden="true">2.2.2.</strong> Widgets</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/window.html"><strong aria-hidden="true">2.2.2.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../../../makepad/built-in/widgets/view.html"><strong aria-hidden="true">2.2.2.2.</strong> View</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.3.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/syntax/global.html"><strong aria-hidden="true">2.3.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/import.html"><strong aria-hidden="true">2.3.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.3.3.</strong> Macro</a></li><li class="chapter-item expanded "><a href="../../../makepad/syntax/redraw.html"><strong aria-hidden="true">2.3.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../../makepad/event/event.html"><strong aria-hidden="true">2.3.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../makepad/event/match_event.html"><strong aria-hidden="true">2.3.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -144,7 +144,7 @@
                     <h1 class="menu-title">Gen-UI Book</h1>
 
                     <div class="right-buttons">
-                        <a href="../../print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../../../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -173,17 +173,63 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="built-in"><a class="header" href="#built-in">Built-In</a></h1>
+                        <h1 id="walk"><a class="header" href="#walk"><code>Walk</code></a></h1>
+<p>The <code>Walk</code> struct is a fundamental part of layout management in Makepad, allowing for flexible and precise positioning and sizing of widgets. Here's a detailed breakdown of its properties:</p>
+<h2 id="properties"><a class="header" href="#properties">Properties</a></h2>
+<div class="table-wrapper"><table><thead><tr><th>Property Name</th><th>Type</th></tr></thead><tbody>
+<tr><td>abs_pos</td><td><code>Option&lt;DVec2&gt;</code></td></tr>
+<tr><td>margin</td><td><code>Margin</code></td></tr>
+<tr><td>width</td><td><code>Size</code></td></tr>
+<tr><td>height</td><td><code>Size</code></td></tr>
+</tbody></table>
+</div>
+<h3 id="dvec2-struct"><a class="header" href="#dvec2-struct"><code>DVec2</code> Struct</a></h3>
+<p>The <code>DVec2</code> struct represents a 2-dimensional vector, typically used for positions and dimensions in the layout system.</p>
+<div class="table-wrapper"><table><thead><tr><th>Property Name</th><th>Type</th></tr></thead><tbody>
+<tr><td>x</td><td><code>f64</code></td></tr>
+<tr><td>y</td><td><code>f64</code></td></tr>
+</tbody></table>
+</div>
+<h4 id="example"><a class="header" href="#example">Example</a></h4>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>abs_pos: Some(DVec2 { x: 10.0, y: 32.5 })
+<span class="boring">}</span></code></pre></pre>
+<h3 id="margin-struct"><a class="header" href="#margin-struct"><code>Margin</code> Struct</a></h3>
+<p>Defines the external padding around a widget, determining its offset from adjacent items or container edges.</p>
+<div class="table-wrapper"><table><thead><tr><th>Property Name</th><th>Type</th></tr></thead><tbody>
+<tr><td>left</td><td><code>f64</code></td></tr>
+<tr><td>top</td><td><code>f64</code></td></tr>
+<tr><td>right</td><td><code>f64</code></td></tr>
+<tr><td>bottom</td><td><code>f64</code></td></tr>
+</tbody></table>
+</div>
+<h3 id="size-enum"><a class="header" href="#size-enum"><code>Size</code> Enum</a></h3>
+<p>Specifies the sizing behavior of a widget, allowing for flexible layout arrangements.</p>
+<div class="table-wrapper"><table><thead><tr><th>Variant Name</th><th>Associated Data</th></tr></thead><tbody>
+<tr><td>Fill</td><td>None</td></tr>
+<tr><td>Fixed</td><td><code>f64</code></td></tr>
+<tr><td>Fit</td><td>None</td></tr>
+<tr><td>All</td><td>None</td></tr>
+</tbody></table>
+</div>
+<p>The <code>Size</code> enum facilitates various sizing strategies, such as:</p>
+<ul>
+<li><code>Fill</code>: filling available space</li>
+<li><code>Fixed</code>: setting a fixed dimension</li>
+<li><code>Fit</code>: adjusting to content</li>
+<li><code>All</code>: a special mode that applies a unique sizing logic</li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../makepad/quickstart.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../../makepad/built-in/types/types.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../../makepad/syntax/syntax.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../../../makepad/built-in/widgets/widgets.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -193,11 +239,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../makepad/quickstart.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../../makepad/built-in/types/types.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../../makepad/syntax/syntax.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../../../makepad/built-in/widgets/widgets.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -228,13 +274,13 @@
         </script>
 
 
-        <script src="../../elasticlunr.min.js"></script>
-        <script src="../../mark.min.js"></script>
-        <script src="../../searcher.js"></script>
+        <script src="../../../elasticlunr.min.js"></script>
+        <script src="../../../mark.min.js"></script>
+        <script src="../../../searcher.js"></script>
 
-        <script src="../../clipboard.min.js"></script>
-        <script src="../../highlight.js"></script>
-        <script src="../../book.js"></script>
+        <script src="../../../clipboard.min.js"></script>
+        <script src="../../../highlight.js"></script>
+        <script src="../../../book.js"></script>
 
         <!-- Custom JS scripts -->
 
