--- a/book/makepad/syntax/redraw.html
+++ b/book/makepad/syntax/redraw.html
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/built-in/struct.html"><strong aria-hidden="true">2.2.</strong> Built-In</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.3.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/syntax/global.html"><strong aria-hidden="true">2.3.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/import.html"><strong aria-hidden="true">2.3.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.3.3.</strong> Macro</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.3.1.</strong> </div></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/syntax/redraw.html" class="active"><strong aria-hidden="true">2.3.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../makepad/event/event.html"><strong aria-hidden="true">2.3.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/event/match_event.html"><strong aria-hidden="true">2.3.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../gen/quickstart.html"><strong aria-hidden="true">1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/makepad.html"><strong aria-hidden="true">2.</strong> Makepad</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/quickstart.html"><strong aria-hidden="true">2.1.</strong> QuickStart</a></li><li class="chapter-item expanded "><a href="../../makepad/built-in/built-in.html"><strong aria-hidden="true">2.2.</strong> Built-In</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/built-in/types/types.html"><strong aria-hidden="true">2.2.1.</strong> Types</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/built-in/types/walk.html"><strong aria-hidden="true">2.2.1.1.</strong> Walk</a></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/built-in/widgets/widgets.html"><strong aria-hidden="true">2.2.2.</strong> Widgets</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/built-in/widgets/window.html"><strong aria-hidden="true">2.2.2.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../../makepad/built-in/widgets/view.html"><strong aria-hidden="true">2.2.2.2.</strong> View</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../makepad/syntax/syntax.html"><strong aria-hidden="true">2.3.</strong> Syntax</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/syntax/global.html"><strong aria-hidden="true">2.3.1.</strong> Global</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/import.html"><strong aria-hidden="true">2.3.2.</strong> Import</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/macro/macro.html"><strong aria-hidden="true">2.3.3.</strong> Macro</a></li><li class="chapter-item expanded "><a href="../../makepad/syntax/redraw.html" class="active"><strong aria-hidden="true">2.3.4.</strong> Redraw</a></li><li class="chapter-item expanded "><a href="../../makepad/event/event.html"><strong aria-hidden="true">2.3.5.</strong> Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../makepad/event/match_event.html"><strong aria-hidden="true">2.3.5.1.</strong> MatchEvent</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/gen-ui-design.html"><strong aria-hidden="true">3.</strong> GenUI-Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/parser.html"><strong aria-hidden="true">3.1.</strong> Parser</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../gen/design/parser/result.html"><strong aria-hidden="true">3.1.1.</strong> Result</a></li><li class="chapter-item expanded "><a href="../../gen/design/parser/all.html"><strong aria-hidden="true">3.1.2.</strong> All</a></li></ol></li><li class="chapter-item expanded "><a href="../../gen/design/converter/converter.html"><strong aria-hidden="true">3.2.</strong> Converter</a></li><li class="chapter-item expanded "><a href="../../gen/design/issues/issues.html"><strong aria-hidden="true">3.3.</strong> issues</a></li><li class="chapter-item expanded "><a href="../../gen/design/future.html"><strong aria-hidden="true">3.4.</strong> future</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -173,17 +173,51 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="redraw"><a class="header" href="#redraw">Redraw</a></h1>
+                        <h1 id="redrawing-mechanism"><a class="header" href="#redrawing-mechanism">Redrawing Mechanism</a></h1>
+<p>Understanding the correct strategies for redrawing is crucial for optimizing application performance and user experience in UI development. Here are two commonly used methods for redrawing and their appropriate scenarios.</p>
+<h2 id="immediate-redraw"><a class="header" href="#immediate-redraw">Immediate Redraw</a></h2>
+<p>The <code>apply_over_and_redraw</code> method allows for the immediate redrawing of the target component. This means that as soon as this method is executed, the specified component will be updated and redrawn right away.</p>
+<p><strong>Applicable Scenario</strong>: This method is suitable when immediate reflection of user interactions or data changes on the UI is required. It ensures the interface responds instantly.</p>
+<p><strong>Example Code</strong>:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>impl MatchEvent for App {
+    fn handle_actions(&amp;mut self, cx: &amp;mut Cx, actions: &amp;Actions) {
+        if self.ui.button(id!(btn1)).clicked(&amp;actions) {
+            self.counter += 1;
+            let label = self.ui.label(id!(t_label));
+            label.apply_over_and_redraw(cx, live! {
+                text: (format!("Click Number: {}", self.counter)),
+            });
+        }
+    }
+}
+<span class="boring">}</span></code></pre></pre>
+<h2 id="batch-redraw"><a class="header" href="#batch-redraw">Batch Redraw</a></h2>
+<p>Another method involves using <code>apply_over</code> to update the data first, followed by a unified call to <code>redraw</code> for redrawing. This method allows for batching changes to multiple components or data, followed by a one-time UI update, reducing the number of renders.</p>
+<p><strong>Applicable Scenario</strong>: When updating multiple components or making multiple data changes, using batch updates followed by a one-time redraw can improve performance by avoiding unnecessary rendering overhead.</p>
+<p><strong>Example Code</strong>:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>impl MatchEvent for App {
+    fn handle_actions(&amp;mut self, cx: &amp;mut Cx, actions: &amp;Actions) {
+        if self.ui.button(id!(btn1)).clicked(&amp;actions) {
+            self.counter += 1;
+            let label = self.ui.label(id!(t_label));
+            label.apply_over(cx, live! {
+                text: (format!("Click Number: {}", self.counter)),
+            });
+            label.redraw(cx);
+        }
+    }
+}
+<span class="boring">}</span></code></pre></pre>
+<h2 id="considerations"><a class="header" href="#considerations">Considerations</a></h2>
 <ul>
-<li><code>apply_over_and_redraw</code>: redraw immediately</li>
-<li><code>apply_over</code> then <code>draw_all</code>: redraw together</li>
+<li>Using <code>apply_over_and_redraw</code> within a redraw function may lead to continuous redraws, which should be avoided in such contexts.</li>
+<li>Generally, it's recommended to use <code>apply_over</code> to update data where possible and then call <code>redraw</code> to redraw collectively, for optimizing application performance.</li>
 </ul>
-<p>the most commonly used should be <code>apply_over</code> and then use <code>draw all</code> to render</p>
-<p>sometimes you dont want it to redraw because you do apply over in a redraw function</p>
-<p>if you use <code>apply_over_and_redraw</code> in the redraw flow it will redraw continuously</p>
-<h2 id="redraw-immediately"><a class="header" href="#redraw-immediately">redraw immediately</a></h2>
-<p>立即重新渲染指的是当代码进行执行后会即刻对目标widget进行重新渲染操作</p>
-<h2 id="redraw-together"><a class="header" href="#redraw-together">redraw together</a></h2>
+<p>By carefully choosing the appropriate redraw strategy, you can ensure a good user experience while optimizing the application's performance.</p>
 
                     </main>
 
